2002-03-08  Phil Edwards  <pme@gcc.gnu.org>

	PR libstdc++/5734
	* include/bits/stl_vector.h (vector::push_back()):  Guard with
	_GLIBCPP_DEPRECATED.

2002-03-05  Benjamin Kosnik  <bkoz@redhat.com>

	* docs/html/17_intro/RELEASE-NOTES: Fix usage.
	* README (libmath): Make clear.

2002-03-05  Jakub Jelinek  <jakub@redhat.com>

	* acinclude.m4 (GLIBCPP_ENABLE_SYMVERS): Check for version
	script globbing in ld.
	* aclocal.m4: Rebuilt.
	* configure: Rebuilt.

2002-03-05  Benjamin Kosnik  <bkoz@redhat.com>

	* docs/html/17_intro/RELEASE-NOTES: Update.
	* README: Format subdirectories.

2002-03-05  Paolo Carlini  <pcarlini@unitus.it>

	libstdc++/5816
	* include/bits/locale_facets.tcc
	(num_get::_M_extract_float): Fix the parsing of __dec, since
	the standard prescribes that if no grouping characters are
	seen, no grouping check is applied.
	* testsuite/22_locale/num_get_members_char.cc: Add test05
	distilled from the PR.
	* testsuite/22_locale/num_get_members_wchar_t.cc: Ditto.

2002-03-04  Craig Rodrigues  <rodrigc@gcc.gnu.org>
 
	* docs/html/17_intro/porting-howto.xml: Refer to
	http://www.oasis-open.org for docbookx.dtd.
	* docs/html/17_intro/porting-howto.html: Regenerated.

2002-03-03  Phil Edwards  <pme@gcc.gnu.org>

        PR libstdc++/2955
	* include/std/std_sstream.h:  Remove trailing spaces.
	(basic_stringbuf::_M_stringbuf_init):  Also check for ios_base::app.
	* testsuite/27_io/stringbuf.cc (test05, test06):  New tests.

2002-03-03  Paolo Carlini  <pcarlini@unitus.it>

	* testsuite/22_locale/num_get_members_char.cc (test04):
	Use a named locale expecting grouping (de_DE).
	* testsuite/22_locale/num_get_members_wchar_t.cc (test04):
	Ditto.
	* testsuite/27_io/ios_manip_basefield.cc (test01):
	Extend coverage, uniform treatment of hexs and octs.

2002-03-01  Paolo Carlini  <pcarlini@unitus.it>

	* include/bits/locale_facets.tcc (num_get::_M_extract_int):
	Admit grouping for octals and hexadecimals too.
	* testsuite/22_locale/num_get_members_char.cc: Add test04.