@@ -1,5 +1,16 @@
 2002-03-08  Phil Edwards  <pme@gcc.gnu.org>
 
+	* include/bits/basic_string.h (basic_string::_S_construct):  Fix
+	names in declaration.
+	(basic_string::compare):  These are no longer optional.
+	* include/bits/ostream.tcc:  Tweak closing brace placement.
+	* include/bits/stl_algo.h:  Lots of initial doxygen comment hooks.
+	* include/std/std_sstream.h:  Fix typo in comment.
+	* include/bits/locale_facets.tcc:  Remove unneeded header inclusion.
+	* src/locale.cc:  Likewise.
+
+2002-03-08  Phil Edwards  <pme@gcc.gnu.org>
+
 	PR libstdc++/5734
 	* include/bits/stl_vector.h (vector::push_back()):  Guard with
 	_GLIBCPP_DEPRECATED.
